--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="article_title">Naziv proizvoda:</string>
+    <string name="caption_price">Veleprodajna cena:</string>
+    <string name="caption_retail_price">Maloprodajna cena:</string>
 
 </resources>
